2001-02-27 John R. Jackson <jrj@purdue.edu>

	* common-src/dgram.c: Add lots more error logging to help track down
	  problems.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* common-src/stream.c: Add lots more error logging to help track down
	  problems.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* server-src/amtape.c: Rewind after loading a slot either by slot
	  or by label.

2001-02-27 John R. Jackson <jrj@purdue.edu>

	* configure.in: Copy ssize_t type check code from main branch.

2001-02-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/SYSTEM.NOTES: change cs.umd.edu by amanda.org.

2001-02-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amindexd.c (uncompress_file): remove uncompressed
	index file if the command failed.

2001-02-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/scsi-changer-driver.c (GenericRewind): init ret to 0
	to remove compiler warning.

2001-02-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (setup_estimate): ask for level 0 for
	a new disk if force-bump is set,
	log force-bump and force-nobump command.

2001-02-21 Thomas Hepper <thqant.han.de>
	* changer-src/scsi-changer-driver.c: Do an Test Unit Ready
	  before sending SCSI commands in GenericRewind
	* changer-src/chg-scsi.c: Fixed an type in the debug print
	  of the config file

2001-02-09 John R. Jackson <jrj@purdue.edu>

	* server-src/diskfile.c: Fix core dump in test program.

2001-02-09 John R. Jackson <jrj@purdue.edu>

	* tape-src/output-file.c: Use a "data" subdirectory of the main
	  file driver device directory to hold the tape "files".  This
	  allows the status file to be moved to the main directory.
	* man/amanda.8.in: Document these changes.

2001-02-05 John R. Jackson <jrj@purdue.edu>

	* man/amanda.8.in: Fix mailto to space separated, not comma.

2001-02-03 John R. Jackson <jrj@purdue.edu>

	* .cvsignore: Add entries to keep CVS quiet.
	* */.cvsignore: Ditto.
